--- a/.env.dev
+++ b/.env.dev
@@ -8,6 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+L5_SWAGGER_CONST_HOST=http://project.test/api/v1
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
