--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,8 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:2jHIg77WyHyhE58hb19w2jUxOd0QE/0lSivCmbTk1gg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://localhost
+
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -60,4 +61,9 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
 TELEGRAM_BOT_TOKEN="7365230836:AAHKt5NOPdz__bMloovBNqx_8G_C3LeWv6Y"
+REACT_SERVER_URL=http://localhost/api
+REACT_SERVER_STATIC_URL=http://localhost/
