--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
     "private": true,
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "vite",
+        "build": "vite build",
+        "prod": "npm run build"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.24.7",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -20,26 +15,25 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@tma.js/sdk-react": "^2.2.5",
-        "@vitejs/plugin-react": "^4.2.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "@vitejs/plugin-vue": "^5.1.2",
         "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
-        "babel-loader": "^9.1.3",
-        "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^1.0.5",
         "postcss": "^8.4.31",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "react-hook-form": "^7.52.1",
-        "react-i18next": "^14.1.2",
-        "react-icons": "^5.2.1",
-        "react-loader-spinner": "^6.1.6",
-        "react-router-dom": "^6.24.1",
         "tailwindcss": "^3.2.1",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.5.4"
+        "vite": "^5.3.5"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
-        "@types/react": "^18.3.3"
+        "@telegram-apps/telegram-ui": "^2.1.4",
+        "axios": "^1.7.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.52.1",
+        "react-i18next": "^14.1.2",
+        "react-icons": "^5.2.1",
+        "react-loader-spinner": "^6.1.6",
+        "react-router-dom": "^6.24.1"
     }
 }
