--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@inertiajs/inertia-react": "^0.8.1",
         "@telegram-apps/telegram-ui": "^2.1.4",
         "axios": "^1.7.2",
+        "hls.js": "^1.5.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.52.1",
