Все приложение переписано под ТГ компоненты. Система безопасности. Теперь к АПИ обращаться можно только из ТГ бота

--- a/.env
+++ b/.env
@@ -61,6 +61,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELEGRAM_BOT_TOKEN="7365230836:AAHKt5NOPdz__bMloovBNqx_8G_C3LeWv6Y"
+TELEGRAM_BOT_TOKEN=7365230836:AAHKt5NOPdz__bMloovBNqx_8G_C3LeWv6Y
 REACT_SERVER_URL=http://localhost/api
 REACT_SERVER_STATIC_URL=http://localhost/
