--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:2jHIg77WyHyhE58hb19w2jUxOd0QE/0lSivCmbTk1gg=
 APP_DEBUG=true
-APP_URL=http://0c3c-195-190-102-194.ngrok-free.app
-PUBLIC_URL=http://0c3c-195-190-102-194.ngrok-free.app
+APP_URL=https://354e-195-190-102-194.ngrok-free.app
+PUBLIC_URL=https://354e-195-190-102-194.ngrok-free.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -62,5 +62,5 @@ VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TELEGRAM_BOT_TOKEN=7365230836:AAHKt5NOPdz__bMloovBNqx_8G_C3LeWv6Y
-REACT_SERVER_URL=http://localhost/api
-REACT_SERVER_STATIC_URL=http://localhost/
+REACT_SERVER_URL=https://localhost/api
+REACT_SERVER_STATIC_URL=https://localhost/
