--- a/.env.production
+++ b/.env.production
@@ -2,18 +2,21 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:2jHIg77WyHyhE58hb19w2jUxOd0QE/0lSivCmbTk1gg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://granica.conversationlab.ru/
+PUBLIC_URL=https://granica.conversationlab.ru/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+L5_SWAGGER_CONST_HOST=http://project.test/api/v1
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=granica
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=nRcVnRcVSkEPRaynSkEPRayn
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -58,4 +61,6 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-TELEGRAM_BOT_TOKEN="7365230836:AAHKt5NOPdz__bMloovBNqx_8G_C3LeWv6Y"
+TELEGRAM_BOT_TOKEN=7215428078:AAFY67PRE0nifeLeoISEwznfE2WEiXF6-xU
+REACT_SERVER_URL=https://localhost/api
+REACT_SERVER_STATIC_URL=https://localhost/
