ссылки на кнопки меняются в зависимости от env

--- a/.env.production
+++ b/.env.production
@@ -12,11 +12,11 @@ LOG_LEVEL=debug
 L5_SWAGGER_CONST_HOST=http://project.test/api/v1
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=granica-mysql-1
 DB_PORT=3306
 DB_DATABASE=granica
-DB_USERNAME=root
-DB_PASSWORD=nRcVnRcVSkEPRaynSkEPRayn
+DB_USERNAME=granica
+DB_PASSWORD=​​Vt7X5BAbVMQK
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -64,3 +64,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TELEGRAM_BOT_TOKEN=7215428078:AAFY67PRE0nifeLeoISEwznfE2WEiXF6-xU
 REACT_SERVER_URL=https://localhost/api
 REACT_SERVER_STATIC_URL=https://localhost/
+
+WEB_APP_URL=https://granica.conversationlab.ru
