Добавлен функционал удаления отчетов для пользователей в течении часа после созданиия Функционал на главном экране "Связаться с разработчиком" - перводит в рабочий чат компании Исправлена логика валидации полей для автобусов из Беларуси Изменен текст на странице со всеми отчетами для автобусов Подключено логирование к elasticsearch Добавлено уведомление (Snackbar) для ошибки при удалении В отчетах добавлено новое поле в БД "Дата создания отчета" заноситься автоматически время текущее сервера Подправлен Swagger

--- a/.env.production
+++ b/.env.production
@@ -19,7 +19,7 @@ DB_USERNAME=granica
 DB_PASSWORD=​​Vt7X5BAbVMQK
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=database
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
