--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:2jHIg77WyHyhE58hb19w2jUxOd0QE/0lSivCmbTk1gg=
 APP_DEBUG=true
-APP_URL=https://b1ca-195-190-102-194.ngrok-free.app
-PUBLIC_URL=https://b1ca-195-190-102-194.ngrok-free.app
+APP_URL=https://3636-195-190-102-194.ngrok-free.app
+PUBLIC_URL=https://3636-195-190-102-194.ngrok-free.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -19,7 +19,7 @@ DB_USERNAME=root
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=database
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
@@ -64,5 +64,3 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 TELEGRAM_BOT_TOKEN=7537550144:AAG25y1LtwLnpQXn3rNsEGZyQ_v2-9y7pO8
 REACT_SERVER_URL=https://localhost/api
 REACT_SERVER_STATIC_URL=https://localhost/
-
-WEB_APP_URL=https://354e-195-190-102-194.ngrok-free.app
