--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
         "defstudio/telegraph": "^1.49",
+        "elasticsearch/elasticsearch": "^8.15",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maxbanton/cwh": "^2.0",
         "opcodesio/log-viewer": "^3.10",
         "tightenco/ziggy": "^2.0"
     },
