--- a/package.json
+++ b/package.json
@@ -27,14 +27,17 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "@telegram-apps/telegram-ui": "^2.1.4",
+        "@tonsolutions/telemetree-react": "^1.1.10",
         "axios": "^1.7.2",
         "hls.js": "^1.5.14",
+        "html2canvas": "^1.4.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.52.1",
         "react-i18next": "^14.1.2",
         "react-icons": "^5.2.1",
         "react-loader-spinner": "^6.1.6",
-        "react-router-dom": "^6.24.1"
+        "react-router-dom": "^6.24.1",
+        "react-share": "^5.1.0"
     }
 }
