--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
         "maxbanton/cwh": "^2.0",
         "opcodesio/log-viewer": "^3.10",
         "tightenco/ziggy": "^2.0",
-        "ext-curl": "*"
+        "ext-curl": "*",
+        "ext-libxml": "*",
+        "ext-dom": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
