--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,10 @@
 /node_modules
 /public/build
 /public/hot
-/public/storage
+/public/storageы
 /storage/*.key
 .env
-/vendor
+/vendor/*
 /vendor/composer
 .env.backup
 .env.production
