Статистика за посление 7 дней по каждому погран переходу Отрисовка графика

--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
         "vite": "^5.3.5"
     },
     "dependencies": {
+        "@emotion/react": "^11.13.3",
+        "@emotion/styled": "^11.13.0",
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
+        "@mui/material": "^6.1.0",
+        "@mui/styled-engine-sc": "^6.1.0",
+        "@mui/x-charts": "^7.17.0",
         "@telegram-apps/telegram-ui": "^2.1.4",
         "@tonsolutions/telemetree-react": "^1.1.10",
         "axios": "^1.7.2",
@@ -38,6 +43,7 @@
         "react-icons": "^5.2.1",
         "react-loader-spinner": "^6.1.6",
         "react-router-dom": "^6.24.1",
-        "react-share": "^5.1.0"
+        "react-share": "^5.1.0",
+        "styled-components": "^6.1.13"
     }
 }
