--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=development
 APP_KEY=base64:2jHIg77WyHyhE58hb19w2jUxOd0QE/0lSivCmbTk1gg=
 APP_DEBUG=true
-APP_URL=https://6457-195-190-102-194.ngrok-free.app
-PUBLIC_URL=https://6457-195-190-102-194.ngrok-free.app
+APP_URL=https://64bd-195-190-102-194.ngrok-free.app
+PUBLIC_URL=https://64bd-195-190-102-194.ngrok-free.app
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
